--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ charset-normalizer==3.2.0
 chroma-hnswlib==0.7.3
 chromadb==0.4.11
 click==8.1.7
+colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.1.4
 confection==0.1.3
@@ -46,6 +47,7 @@ elasticsearch==8.9.0
 email-validator==2.0.0.post2
 emoji==2.8.0
 et-xmlfile==1.1.0
+exceptiongroup==1.2.1
 executing==1.2.0
 faiss-cpu==1.7.4
 fastapi==0.99.1
@@ -86,8 +88,8 @@ jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.19.0
 jsonschema-specifications==2023.7.1
-jupyter_client==8.3.1
-jupyter_core==5.3.1
+jupyter-client==8.3.1
+jupyter-core==5.3.1
 kiwisolver==1.4.5
 langchain==0.0.332
 langcodes==3.3.0
@@ -150,7 +152,7 @@ pyarrow==13.0.0
 pycocotools==2.0.7
 pycparser==2.21
 pydantic==1.10.12
-pydantic_core==2.6.3
+pydantic-core==2.6.3
 pydeck==0.8.0
 pydub==0.25.1
 pyee==11.0.1
@@ -161,17 +163,20 @@ pyparsing==3.1.1
 pypdf==3.16.2
 pypdfium2==4.20.0
 PyPika==0.48.9
+pyreadline3==3.4.1
 pytesseract==0.3.10
 python-dateutil==2.8.2
 python-docx==0.8.11
 python-dotenv==1.0.0
 python-iso639==2023.6.15
 python-magic==0.4.27
+python-magic-bin==0.4.14
 python-multipart==0.0.6
 python-pptx==0.6.21
 pytube==11.0.2
 pytz==2023.3.post1
 pytz-deprecation-shim==0.1.0.post0
+pywin32==306
 PyYAML==6.0.1
 pyzmq==25.1.1
 rapidfuzz==3.3.1
@@ -201,6 +206,7 @@ srsly==2.4.7
 stack-data==0.6.2
 starlette==0.27.0
 streamlit==1.27.2
+streamlit-pills==0.3.0
 sympy==1.12
 tabulate==0.9.0
 tenacity==8.2.3
@@ -210,6 +216,7 @@ tiktoken==0.5.1
 timm==0.9.7
 tokenizers==0.14.0
 toml==0.10.2
+tomli==2.0.1
 toolz==0.12.0
 torch==2.0.1
 torchvision==0.15.2
@@ -218,8 +225,8 @@ tqdm==4.66.1
 traitlets==5.10.0
 transformers==4.34.0
 typer==0.9.0
+typing-extensions==4.7.1
 typing-inspect==0.9.0
-typing_extensions==4.7.1
 tzdata==2023.3
 tzlocal==4.3.1
 ujson==5.8.0
@@ -235,6 +242,7 @@ watchfiles==0.20.0
 wcwidth==0.2.6
 websockets==11.0.3
 wikipedia==1.4.0
+win32-setctime==1.1.0
 xlrd==2.0.1
 XlsxWriter==3.1.5
 yarl==1.9.2
